--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <body>
-            <p>Neki paragraf koji sam naknadno dodo</p>
+            <p>Neki paragraf koji sam naknadno dodo e tototo</p>
         </body>
     </head>
 </html>
